<resources>
    <string name="app_name">MAD_Basic_operations</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="update_profile">Update Profile</string>
    <string name="add">ADD</string>
    <string name="profile_management">Profile Management</string>
    <string name="user_name_PM">User Name</string>
    <string name="date_of_birth_PM">Date Of Birth</string>
    <string name="password_PM">Password</string>
    <string name="user_name_pm">user_name</string>
    <string name="male_pm">Male</string>
    <string name="female_pm">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_ep">Search</string>
    <string name="delete_EP">DELETE</string>
    <string name="edit_EP">EDIT</string>
    <string name="password_EP">Password</string>
    <string name="gender_EP">Gender</string>
</resources>